--- a/Codename_Puck/app/src/main/res/values/strings.xml
+++ b/Codename_Puck/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="action_report">"Report"</string>
     <string name="action_camera">"Camera</string>
+    <string name="action_delete">"Delete"</string>
 </resources>
